# AirIO_Damvi

./: .gitignore  CMakeLists.txt  Makefile  package.xml  rviz
bag/fast/: metadata.yaml
bag/slow/: metadata.yaml
bag/valid/: metadata.yaml
compose/: compose.desktop.yaml  compose.jetson.yaml  compose.yaml
configs/: bashrc_config.txt
containers/: Dockerfile.cuda  Dockerfile.jetson  Dockerfile.nogpu
include/airio/: airio_realtime_pipeline.cpp  airio_realtime_pipeline.hpp
include/airio/debug/: airio_debug_sink.hpp  airio_ros_debug_logger.cpp  airio_ros_debug_logger.hpp
include/airio/ekf/: jacobian.hpp  so3_ops.hpp  types.hpp  velocity_ekf.cpp  velocity_ekf.hpp
include/core/: imu_buffer.cpp  imu_buffer.hpp
include/onnx/: airimu_onnx_runner.hpp  airio_onnx_runner.hpp
include/tensorrt/: airimu_tensorrt_runner.hpp  airio_tensorrt_runner.hpp
model/airimu/: airimu.onnx  airimu_codenet_fp32_T1000.onnx  airimu_codenet_fp32_T50.onnx  airimu_codenet_fp32_T50.onnx.data  cnn.py  code.py  codenet.yaml  codenet_corr_feat_fp16.engine  others.py
model/airio/: MY_body.conf  airio_codewithrot_fp32_T50.engine  airio_codewithrot_fp32_T50.onnx  airio_codewithrot_fp32_T50.onnx.data  motion_body_rot.conf
scripts/: check_ckpt.py  onnx_airimu copy.py  onnx_airimu.py  onnx_airio.py
src/: imu_subscriber.cpp  onnx_airio_Damvi.cpp  tensorrt_airio_Damvi.cpp
